--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+    <title>Gold Mine</title>
+    <meta charset="utf-8">
+
+    <!-- link to css -->
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
+    <h1>Gold Mine</h1>
+    
+    <!-- hat carousel -->
+    <figure>
+        <article>red hat</article>
+    </figure>
 
+    <!-- shirt carousel -->
+    <figure>
+        <article>red shirt</article>
+    </figure>
+
+    <!-- shoe carousel -->
+    <figure>
+        <article>red shoes</article>
+    </figure>
 </body>
 </html>
