--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,14 @@
     <meta charset="utf-8">
 
     <!-- link to css -->
+    <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
-    <h1>Gold Mine</h1>
+    <header>
+        <h1>Gold Mine</h1>
+    </header>
     
     <!-- hat carousel -->
     <figure>
