shop, signup/login

--- a/public/index.html
+++ b/public/index.html
@@ -14,20 +14,8 @@
     <header>
         <h1>Gold Mine</h1>
     </header>
-    
-    <!-- hat carousel -->
-    <figure>
-        <article>red hat</article>
-    </figure>
-
-    <!-- shirt carousel -->
-    <figure>
-        <article>red shirt</article>
-    </figure>
-
-    <!-- shoe carousel -->
-    <figure>
-        <article>red shoes</article>
-    </figure>
+   
+    <p>Welcome to Gold Mine! In this game you can create your avatar, play a minigame to earn gold, and buy items from the shop to customize your avatar!</p>
 </body>
+
 </html>
