--- a/public/signup.html
+++ b/public/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Gold Mine: Login</title>
+    <title>Gold Mine: Signup</title>
     <meta charset="utf-8">
 
     <!-- link to css -->
@@ -17,8 +17,10 @@
 
     <p>Welcome to Gold Mine! In this game you can create an avatar, play a minigame to earn gold, and buy items from the shop to customize your avatar!</p>
 
+    <!-- <p id="errorP"></p> -->
+
     <!-- form reloads the page with POST request -->
-    <form action="/login" method="POST">
+    <form action="/signup" method="POST">
         <figure>
             <label for="username">Username</label>
             <input id="username" name="username" required>
@@ -29,8 +31,21 @@
             <input id="password" name="password" type="password" required>
         </figure>
 
-        <button type="submit" id="loginBtn">Login</button>
+        <button type="submit" id="signupBtn">Signup</button>
     </form>
-    <a href="/signup">New user? Sign up here</a>
+    <a href="/login">Already have an account? Login here</a>
 </body>
+    <script>
+        // extract query parameters
+        const params = new URLSearchParams(window.location.search);
+
+        // check for error/success message
+        const error = params.get('error');
+
+        // grab element
+        const errorP = document.getElementById('errorP');
+
+        if (error)
+            errorP.textContent = error;
+    </script>
 </html>
