--- a/public/shop.html
+++ b/public/shop.html
@@ -31,10 +31,11 @@
             <img id="hatsImg" src="/images/blank.png">
             <img id="shirtsImg" src="/images/blank.png">
             <img id="pantsImg" src="/images/blank.png">
+
             <!-- information for buying items -->
-            <figure id="itemFigure">
-                <p>hi freinds</p>
-                <button id="buyButton" class="disabled"></button>
+            <figure id="buyFigure">
+                <p id="buyP">hi freinds</p>
+                <button id="buyButton" disabled></button>
             </figure>
         </section>
 
