--- a/public/Minigame.html
+++ b/public/Minigame.html
@@ -1,113 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Minigame</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .game-container {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 300px;
-        }
-        .game-container h1 {
-            margin-bottom: 20px;
-            color: #333;
-        }
-        .question {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
-        input[type="number"] {
-            padding: 10px;
-            width: 80px;
-            font-size: 1em;
-            margin-right: 10px;
-        }
-        button {
-            padding: 10px 15px;
-            font-size: 1em;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .status {
-            margin-top: 20px;
-            font-size: 1em;
-        }
-        .gold-counter {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #333;
-        }
-    </style>
+    <title>Gold Mine: Minigame</title>
+    <meta charset="utf-8">
+
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/minigame.css">
+    <script defer src="/js/minigame.js"></script>
 </head>
+
 <body>
-    <div class="game-container">
-        <h1>Math Minigame</h1>
-        <div class="question" id="question">What is 2 + 2?</div>
-        <input type="number" id="answer" placeholder="Your answer">
-        <button onclick="checkAnswer()">Submit</button>
-        <div class="status" id="status"></div>
-        <div class="gold-counter" id="gold">Gold Coins: 0</div>
-    </div>
+    <nav>
+        <a href="/shop">Shop</a>
+        <a href="/minigame">Minigame</a>
+        <a href="/users">Users</a>
+    </nav>
+    <header>
+        <h1>Gold Mine</h1>
+    </header>
 
-    <script>
-        let gold = 0;
+    <main>
+        <figure id="userFigure">
+            <p id="userP">User: <mark id="userMark"></mark></p>
+            <p id="goldP">Gold: <mark id="goldMark"></mark></p>
+            <a href="/logout">Log out</a>
+        </figure>
 
-        // Generate a random math question
-        function generateQuestion() {
-            const num1 = Math.floor(Math.random() * 10) + 1;
-            const num2 = Math.floor(Math.random() * 10) + 1;
-            const operator = ["+", "-", "*"][Math.floor(Math.random() * 3)];
-
-            const questionElement = document.getElementById("question");
-            questionElement.dataset.answer = eval(`${num1} ${operator} ${num2}`);
-            questionElement.innerText = `What is ${num1} ${operator} ${num2}?`;
-        }
-
-        // Check the user's answer
-        function checkAnswer() {
-            const userAnswer = parseInt(document.getElementById("answer").value);
-            const correctAnswer = parseInt(document.getElementById("question").dataset.answer);
-
-            const statusElement = document.getElementById("status");
-            const goldElement = document.getElementById("gold");
-
-            if (userAnswer === correctAnswer) {
-                gold++;
-                statusElement.innerText = "Correct! You earned 1 gold coin!";
-                statusElement.style.color = "green";
-            } else {
-                statusElement.innerText = "Incorrect! Try again.";
-                statusElement.style.color = "red";
-            }
-
-            goldElement.innerText = `Gold Coins: ${gold}`;
-            document.getElementById("answer").value = ""; // Clear the input
-            generateQuestion(); // Generate a new question
-        }
-
-        // Initialize the first question
-        generateQuestion();
-    </script>
+        <p id="questionP"></p>
+        <input id="answerInput">
+        <button id="answerButton" onclick="checkAnswer()" disabled>Enter your answer</button>
+        <p id="status"></p>
+    </main>
 </body>
 </html>
