--- a/public/shop.html
+++ b/public/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Gold Mine</title>
+    <title>Gold Mine: Shop</title>
     <meta charset="utf-8">
 
     <!-- link to css -->
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+    <nav>
+        <a href="/shop">Shop</a>
+        <a href="/minigame">Minigame</a>
+        <a href="/users">Users</a>
+    </nav>
     <header>
         <h1>Gold Mine</h1>
     </header>
