--- a/public/shop.html
+++ b/public/shop.html
@@ -39,7 +39,7 @@
 
             <!-- information for buying items -->
             <figure id="buyFigure">
-                <p id="buyP">hi freinds</p>
+                <p id="buyP"></p>
                 <button id="buyButton" disabled></button>
             </figure>
         </section>
